--- a/packages/service/pm2-ecosystem.yml
+++ b/packages/service/pm2-ecosystem.yml
@@ -1,19 +1,19 @@
 apps:
   - name: github-proxy-server
-    interpreter: npx
-    interpreter_args: --node-args="-r dotenv/config -r pretty-error/start"
-    script: github-proxy-server
-    args: --port 3000 --request-interval 50 --tokens tokens.txt
+    script: node_modules/@hsborges/github-proxy-server/index.js
+    interpreter_args: -r dotenv/config -r pretty-error/start
+    args: --port 3000 --request-interval 100 --tokens tokens.txt
+    cron_restart: "0 * * * *"
     error_file: /dev/null
-    out_file: /dev/null
     env:
-      DEBUG: 'github-proxy'
+      DEBUG: "github-proxy"
+      DEBUG_HIDE_DATE: true
 
   - name: gittrends-scheduler
     script: scheduler.js
     args: all
     instance_var: INSTANCE_ID
-    cron_restart: '0 * * * *'
+    cron_restart: "0 * * * *"
     autorestart: false
 
   - name: gittrends-repos
