--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.19.1",
     "bluebird": "^3.7.2",
     "bull": "^3.12.1",
+    "chalk": "^4.0.0",
     "commander": "^5.0.0",
     "debug": "^4.0.1",
     "dotenv": "^8.2.0",
@@ -29,8 +30,10 @@
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongodb": "^3.5.6",
+    "numeral": "^2.0.6",
     "pretty-error": "^2.1.1",
     "promise-retry": "^1.1.1",
+    "table": "^5.4.6",
     "user-agents": "^1.0.559"
   },
   "devDependencies": {
