--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -1,13 +1,14 @@
 {
   "name": "service.gittrends.app",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "GitTrends.app service worker to collect information on OSS projects",
   "homepage": "http://gittrends.app",
   "main": "index.js",
   "author": "Hudson Silva Borges <hudsonsilbor@gmail.com>",
   "scripts": {
-    "test": "echo 'Not implemented yet :('",
-    "proxy": "npx --node-args='-r dotenv/config -r pretty-error/start' github-proxy-server"
+    "test": "jest",
+    "proxy-server": "github-proxy-server --tokens tokens.txt --request-interval 50",
+    "update": "pm2 start pm2-ecosystem.yml"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "commander": "^5.1.0",
     "debug": "^4.0.1",
     "dotenv": "^8.2.0",
+    "jest": "^26.1.0",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
