--- a/packages/service/docker-compose.yml
+++ b/packages/service/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   mongo:
@@ -8,7 +8,7 @@ services:
     ports:
       - ${GITTRENDS_MONGO_PORT}:27017
     volumes:
-      - 'db:/data/db'
+      - "db:/data/db"
 
   redis:
     image: redis:alpine
@@ -28,6 +28,11 @@ services:
       - .:/usr/src/app
     working_dir: /usr/src/app
     command: npx github-proxy-server --port ${GITTRENDS_PROXY_PORT} --request-interval 50 --tokens ${GITHUB_TOKENS_FILE} --verbose
+    logging:
+      driver: json-file
+      options:
+        max-size: 200k
+        max-file: "5"
 
   service:
     image: node:latest
@@ -47,6 +52,11 @@ services:
       GITTRENDS_MONGO_HOST: gittrends-db
       GITTRENDS_REDIS_HOST: gittrends-cache
       GITTRENDS_PROXY_HOST: github-proxy-server
+    logging:
+      driver: json-file
+      options:
+        max-size: 200k
+        max-file: "5"
 
 volumes:
   db:
