chore: add .example extension to pm2 ecosystem file

--- a/packages/service/pm2-ecosystem.yml.example
+++ b/packages/service/pm2-ecosystem.yml.example
@@ -1,4 +1,7 @@
 apps:
+  - name: bull-board
+    script: util/bull-board.js
+
   - name: gittrends-scheduler
     script: scheduler.js
     args: all
