--- a/packages/service/docker-compose.yml
+++ b/packages/service/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: '3.7'
 
 services:
   mongo:
@@ -8,7 +8,7 @@ services:
     ports:
       - ${GITTRENDS_MONGO_PORT}:27017
     volumes:
-      - "db:/data/db"
+      - 'db:/data/db'
 
   redis:
     image: redis:alpine
@@ -32,12 +32,14 @@ services:
       driver: json-file
       options:
         max-size: 200k
-        max-file: "5"
+        max-file: '5'
 
   service:
     image: node:latest
     container_name: gittrends-service
     restart: always
+    ports:
+      - ${BULL_BOARD_PORT}:${BULL_BOARD_PORT}
     depends_on:
       - mongo
       - redis
@@ -56,7 +58,7 @@ services:
       driver: json-file
       options:
         max-size: 200k
-        max-file: "5"
+        max-file: '5'
 
 volumes:
   db:
