feat: enable concurrent requests on issues/pulls updates

--- a/.env.example
+++ b/.env.example
@@ -34,5 +34,6 @@ GITTRENDS_MAIL_PASS=
 
 # other
 GITTRENDS_QUEUE_ATTEMPS=3
+GITTRENDS_UPDATER_CONCURRENCY=1
 GITTRENDS_BATCH_SIZE=500
 BULL_BOARD_PORT=8081
