--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -14,10 +14,11 @@
     "pm2": "pm2 start pm2-ecosystem.yml"
   },
   "dependencies": {
-    "@hsborges/github-proxy-server": "^1.3.0",
     "@gittrends/database-config": "*",
+    "@hsborges/github-proxy-server": "^1.3.0",
     "axios": "^0.19.1",
     "bluebird": "^3.7.2",
+    "bottleneck": "^2.19.5",
     "bull": "^3.16.0",
     "bull-board": "^0.9.0",
     "chalk": "^4.1.0",
