feat: use sqlite to export data and refactor code

--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,8 @@ GITTRENDS_MONGO_HOST=localhost
 GITTRENDS_MONGO_PORT=27017
 GITTRENDS_MONGO_DB=gittrends_app-development
 
-# postgres - website database
-GITTRENDS_POSTGRES_HOST=localhost
-GITTRENDS_POSTGRES_PORT=5432
-GITTRENDS_POSTGRES_DB=gittrends_app-development
-GITTRENDS_POSTGRES_USERNAME=postgres
-GITTRENDS_POSTGRES_PASSWORD=
+# sqlite3 - website database
+GITTRENDS_API_FILENAME=dumps/database-development.sqlite3
 
 # github proxy configuration
 GITTRENDS_PROXY_PROTOCOL=http
@@ -26,6 +22,7 @@ GITTRENDS_PROXY_RETRIES=5
 # website configuration
 GITHUB_CLIENT_ID=
 GITHUB_SECRET_ID=
+
 GITTRENDS_MAIL_TO=
 GITTRENDS_MAIL_HOST=
 GITTRENDS_MAIL_PORT=
