--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,107 +1,47 @@
 version: '3.7'
 
 services:
-  mongo:
-    image: mongo:latest
-    container_name: gittrends-db
-    restart: always
-    ports:
-      - ${GITTRENDS_MONGO_PORT}:27017
-    volumes:
-      - 'db:/data/db'
-    networks:
-      - gittrends
-
-  postgres:
-    image: postgres:alpine
-    container_name: gittrends-website-db
-    restart: always
-    ports:
-      - ${GITTRENDS_POSTGRES_PORT}:5432
-    volumes:
-      - 'website-db:/var/lib/postgresql/data'
-    environment:
-      POSTGRES_USER: ${GITTRENDS_POSTGRES_USERNAME}
-      POSTGRES_PASSWORD: ${GITTRENDS_POSTGRES_PASSWORD}
-      POSTGRES_DB: ${GITTRENDS_POSTGRES_DB}
-    networks:
-      - gittrends
-
-  redis:
-    image: redis:alpine
-    container_name: gittrends-cache
-    restart: always
-    ports:
-      - ${GITTRENDS_REDIS_PORT}:6379
-    command: --maxmemory 50mb --maxmemory-policy volatile-lfu
-    networks:
-      - gittrends
-
-  traefik:
-    image: 'traefik:v2.2'
-    container_name: 'gittrends-traefik'
-    command:
-      - '--api.insecure=true'
-      - '--providers.docker=true'
-      - '--providers.docker.exposedbydefault=false'
-      - '--entrypoints.web.address=:80'
-    ports:
-      - 80:80
-      - 8080:8080
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    networks:
-      - gittrends
-
-  api:
+  website-api:
     image: node:latest
-    container_name: gittrends-api
     restart: always
     expose:
       - 80
-    depends_on:
-      - traefik
-      - postgres
     volumes:
       - .:/usr/src/app
     working_dir: /usr/src/app/packages/api
     command: yarn start --port 80
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.api.rule=Host(`localhost`) && PathPrefix(`/api`)'
-      - 'traefik.http.routers.api.entrypoints=web'
-      - 'traefik.http.routers.api.middlewares=api-stripprefix'
-      - 'traefik.http.middlewares.api-stripprefix.stripprefix.prefixes=/api'
+    networks:
+      - gittrends
+
+  website-server:
+    image: node:latest
+    restart: always
+    expose:
+      - 80
+    volumes:
+      - .:/usr/src/app
+    depends_on:
+      - website-api
+    working_dir: /usr/src/app/packages/website
+    command: yarn start -H 0.0.0.0 -p 80
     environment:
-      GITTRENDS_POSTGRES_HOST: postgres
+      GITTRENDS_API_HOST: website-api
+      GITTRENDS_API_PORT: 80
     networks:
       - gittrends
 
   website:
     image: nginx:alpine
-    container_name: gittrends-website
     restart: always
-    expose:
-      - 80
+    ports:
+      - 80:80
     volumes:
-      - ./packages/website/dist:/usr/share/nginx/html:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
-      - traefik
-      - api
-    labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.website.rule=Host(`localhost`)'
-      - 'traefik.http.routers.website.entrypoints=web'
+      - website-api
+      - website-server
     networks:
       - gittrends
-
-volumes:
-  db:
-    external: true
-    name: gittrends.app-database
-  website-db:
-    external: true
-    name: gittrends.app-website-database
 
 networks:
   gittrends:
