--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -12,10 +12,7 @@
     "schedule": "node scheduler.js",
     "update": "node updater.js",
     "pm2": "pm2 start pm2-ecosystem.yml",
-    "docker-compose:up": "docker-compose --env-file ../../.env up",
-    "docker-compose:down": "docker-compose --env-file ../../.env down",
-    "docker-compose:stop": "docker-compose --env-file ../../.env stop",
-    "docker-compose:logs": "docker-compose --env-file ../../.env logs"
+    "docker-compose": "docker-compose --env-file ../../.env"
   },
   "dependencies": {
     "@gittrends/database-config": "*",
