--- a/packages/exporter/package.json
+++ b/packages/exporter/package.json
@@ -15,6 +15,7 @@
     "consola": "^2.15.0",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "promise-retry": "^2.0.1"
   }
 }
