--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -18,10 +18,10 @@
     "@gittrends/database-config": "*",
     "@hsborges/github-proxy-server": "^1.3.5",
     "axios": "^0.19.1",
+    "bee-queue": "^1.2.3",
     "bluebird": "^3.7.2",
     "bottleneck": "^2.19.5",
-    "bull": "^3.16.0",
-    "bull-board": "^0.9.0",
+    "bull-arena": "^3.4.0",
     "chalk": "^4.1.0",
     "commander": "^6.0.0",
     "consola": "^2.15.0",
@@ -35,6 +35,7 @@
     "numeral": "^2.0.6",
     "pretty-error": "^2.1.1",
     "promise-retry": "^2.0.1",
+    "redis": "^3.0.2",
     "table": "^5.4.6",
     "user-agents": "^1.0.559"
   },
