--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -23,6 +23,7 @@
     "bottleneck": "^2.19.5",
     "bull-arena": "^3.4.0",
     "chalk": "^4.1.0",
+    "collections": "^5.1.12",
     "commander": "^6.0.0",
     "consola": "^2.15.0",
     "debug": "^4.0.1",
@@ -33,6 +34,7 @@
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "numeral": "^2.0.6",
+    "pg-query-stream": "^3.4.2",
     "pretty-error": "^2.1.1",
     "promise-retry": "^2.0.1",
     "redis": "^3.0.2",
