--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,23 @@
+# gittrends database
+GITTRENDS_DATABASE_HOST=localhost
+GITTRENDS_DATABASE_PORT=5432
+GITTRENDS_DATABASE_DB=gittrends_app-development
+GITTRENDS_DATABASE_USERNAME=postgres
+GITTRENDS_DATABASE_PASSWORD=postgres
+GITTRENDS_DATABASE_POOL_MIN=2
+GITTRENDS_DATABASE_POOL_MAX=10
+
 # redis - caching and messaging queue
 GITTRENDS_REDIS_HOST=localhost
 GITTRENDS_REDIS_PORT=6379
 GITTRENDS_REDIS_DB=0
-
-# mongodb - github data storage
-GITTRENDS_MONGO_HOST=localhost
-GITTRENDS_MONGO_PORT=27017
-GITTRENDS_MONGO_DB=gittrends_app-development
-
-# sqlite3 - website database
-GITTRENDS_API_FILENAME=dumps/database-development.sqlite3
 
 # github proxy configuration
 GITTRENDS_PROXY_PROTOCOL=http
 GITTRENDS_PROXY_HOST=localhost
 GITTRENDS_PROXY_PORT=3000
 GITTRENDS_PROXY_TIMEOUT=20000
-GITTRENDS_PROXY_USER_AGENT="My awesome github crawler service"
+GITTRENDS_PROXY_USER_AGENT="My awesome GitHub Graphql data crawler"
 GITTRENDS_PROXY_RETRIES=5
 
 # website configuration
@@ -30,7 +31,7 @@ GITTRENDS_MAIL_USER=
 GITTRENDS_MAIL_PASS=
 
 # other
+GITTRENDS_BATCH_SIZE=1000
 GITTRENDS_QUEUE_ATTEMPS=3
-GITTRENDS_UPDATER_CONCURRENCY=1
-GITTRENDS_BATCH_SIZE=500
-BULL_BOARD_PORT=8081
+GITTRENDS_QUEUE_BOARD_PORT=8081
+GITTRENDS_PGADMIN_PORT=8080
