--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     image: dpage/pgadmin4:latest
     restart: always
     ports:
-      - 8080:80
+      - ${GITTRENDS_QUEUE_BOARD_PORT}:80
     volumes:
       - 'pgadmin-db:/var/lib/pgadmin'
     environment:
@@ -75,7 +75,7 @@ services:
 volumes:
   db:
     external: true
-    name: gittrends.app-website
+    name: gittrends.app
   pgadmin-db:
     name: pgadmin.gittrends.app
 
