--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -10,7 +10,7 @@
     "add-repositories": "node add-repositories.js",
     "add-repository": "node add-repository.js",
     "schedule": "node scheduler.js",
-    "update": "node updater.js",
+    "update": "node --expose-gc updater.js",
     "pm2": "pm2 start pm2-ecosystem.yml",
     "docker-compose": "docker-compose --env-file ../../.env"
   },
@@ -32,6 +32,7 @@
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "node-cache": "^5.1.2",
     "numeral": "^2.0.6",
     "pretty-error": "^2.1.2",
     "promise-retry": "^2.0.1",
