--- a/packages/service/pm2-ecosystem.yml.example
+++ b/packages/service/pm2-ecosystem.yml.example
@@ -1,36 +1,36 @@
 apps:
-  - name: bull-board
-    script: util/bull-board.js
+  - name: queue-board
+    script: util/queue-board.js
 
-  - name: gittrends-scheduler
+  - name: scheduler
     script: scheduler.js
     args: all
     instance_var: INSTANCE_ID
-    cron_restart: '0 * * * *'
+    cron_restart: '0/4 * * * *'
     autorestart: false
 
-  - name: gittrends-updater
+  - name: updater
     script: updater.js
     args: repos stargazers watchers tags releases dependencies --workers 1
     instances: 1
     exec_mode: cluster
     instance_var: INSTANCE_ID
 
-  - name: gittrends-issues
+  - name: issues
     script: updater.js
     args: issues --workers 1
     instances: 1
     exec_mode: cluster
     instance_var: INSTANCE_ID
 
-  - name: gittrends-pulls
+  - name: pulls
     script: updater.js
     args: pulls --workers 1
     instances: 1
     exec_mode: cluster
     instance_var: INSTANCE_ID
 
-  - name: gittrends-users
+  - name: users
     script: updater.js
     args: users --workers 1
     instances: 1
