--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -5,13 +5,11 @@
   "license": "MIT",
   "author": "Hudson Silva Borges <hudsonsilbor@gmail.com>",
   "scripts": {
-    "test": "jest",
-    "github-proxy-server": "github-proxy-server --tokens ../../tokens.txt",
+    "proxy-server": "github-proxy-server --tokens ../../tokens.txt",
     "add-repositories": "node add-repositories.js",
     "add-repository": "node add-repository.js",
     "schedule": "node scheduler.js",
     "update": "node --expose-gc updater.js",
-    "pm2": "pm2 start pm2-ecosystem.yml",
     "docker-compose": "docker-compose --env-file ../../.env"
   },
   "dependencies": {
@@ -26,16 +24,17 @@
     "collections": "^5.1.12",
     "commander": "^6.2.0",
     "consola": "^2.15.0",
+    "dayjs": "^1.9.6",
     "debug": "^4.2.0",
     "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.20",
-    "moment": "^2.29.1",
     "node-cache": "^5.1.2",
     "numeral": "^2.0.6",
     "pretty-error": "^2.1.2",
     "promise-retry": "^2.0.1",
+    "redis": "^3.0.2",
     "table": "^6.0.3",
     "user-agents": "^1.0.559"
   },
