--- a/packages/website-api/package.json
+++ b/packages/website-api/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "@gittrends/api",
+  "name": "@gittrends/website-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "DOTENV_CONFIG_PATH=../../.env npx -n '-r dotenv/config' fastify start -l info app.js",
-    "dev": "DOTENV_CONFIG_PATH=../../.env npx -n '-r dotenv/config' fastify start -w -l info -P app.js"
+    "start": "npx -n '-r @hsborges/env-config' fastify start -l info app.js",
+    "dev": "npx -n '-r @hsborges/env-config' fastify start -w -l info -P app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@gittrends/database-config": "*",
+    "@gittrends/database-config": "file:../database-config",
     "axios": "^0.19.2",
+    "dayjs": "^1.9.6",
     "faker": "^4.1.0",
     "fastify": "^3.2.0",
     "fastify-autoload": "^3.0.7",
@@ -21,7 +22,9 @@
     "fastify-helmet": "^5.0.0",
     "fastify-plugin": "^2.2.0",
     "lodash": "^4.17.19",
-    "moment": "^2.27.0",
     "nodemailer": "^6.4.11"
+  },
+  "devDependencies": {
+    "@hsborges/env-config": "file:../env-config"
   }
 }
