refactor: more refactorings

--- a/.env.example
+++ b/.env.example
@@ -17,12 +17,14 @@ GITTRENDS_PROXY_PROTOCOL=http
 GITTRENDS_PROXY_HOST=localhost
 GITTRENDS_PROXY_PORT=3000
 GITTRENDS_PROXY_TIMEOUT=20000
-GITTRENDS_PROXY_USER_AGENT="My awesome GitHub Graphql data crawler"
+GITTRENDS_PROXY_USER_AGENT="My awesome app"
 GITTRENDS_PROXY_RETRIES=5
 
 # website configuration
-GITHUB_CLIENT_ID=
-GITHUB_SECRET_ID=
+GITTRENDS_WEBSITE_HOST=localhost
+GITTRENDS_WEBSITE_PORT=8080
+GITTRENDS_API_HOST=localhost
+GITTRENDS_API_PORT=3000
 
 GITTRENDS_MAIL_TO=
 GITTRENDS_MAIL_HOST=
@@ -30,8 +32,12 @@ GITTRENDS_MAIL_PORT=
 GITTRENDS_MAIL_USER=
 GITTRENDS_MAIL_PASS=
 
+GITHUB_CLIENT_ID=
+GITHUB_SECRET_ID=
+
 # other
 GITTRENDS_BATCH_SIZE=1000
-GITTRENDS_QUEUE_ATTEMPS=3
+GITTRENDS_QUEUE_ATTEMPS=1
 GITTRENDS_QUEUE_BOARD_PORT=8081
-GITTRENDS_PGADMIN_PORT=8080
+GITTRENDS_PGADMIN_PORT=8082
+
