--- a/packages/service/pm2-ecosystem.yml.example
+++ b/packages/service/pm2-ecosystem.yml.example
@@ -10,6 +10,7 @@ apps:
     out_file: /dev/null
 
   - name: scheduler
+    interpreter_args: -r @hsborges/env-config
     script: scheduler.js
     args: all
     instance_var: INSTANCE_ID
@@ -17,6 +18,7 @@ apps:
     autorestart: false
 
   - name: updater
+    interpreter_args: -r @hsborges/env-config
     script: updater.js
     args: repos stargazers watchers tags releases dependencies --workers 1
     instances: 1
@@ -24,6 +26,7 @@ apps:
     instance_var: INSTANCE_ID
 
   - name: issues
+    interpreter_args: -r @hsborges/env-config
     script: updater.js
     args: issues --workers 1
     instances: 1
@@ -31,6 +34,7 @@ apps:
     instance_var: INSTANCE_ID
 
   - name: pulls
+    interpreter_args: -r @hsborges/env-config
     script: updater.js
     args: pulls --workers 1
     instances: 1
@@ -38,6 +42,7 @@ apps:
     instance_var: INSTANCE_ID
 
   - name: users
+    interpreter_args: -r @hsborges/env-config
     script: updater.js
     args: users --workers 1
     instances: 1
