--- a/packages/website/Dockerfile
+++ b/packages/website/Dockerfile
@@ -10,7 +10,6 @@ FROM node:latest
 WORKDIR /app
 COPY --from=env-config /app/env-config env-config
 
-ARG GITHUB_CLIENT_ID
 ARG GITTRENDS_API_HOST=localhost
 ARG GITTRENDS_API_PORT=3000
 
@@ -18,9 +17,8 @@ WORKDIR /app/website
 COPY /packages/website/package.json .
 RUN yarn install
 COPY /packages/website/. .
-
 RUN yarn build
 
 EXPOSE 80
 
-CMD yarn start --port 80 -H 0.0.0.0
+CMD [ "yarn", "start", "--port", "80", "-H", "0.0.0.0" ]
