--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@gittrends/database-config": "file:../database-config",
+    "ajv": "^6.12.6",
     "axios": "^0.21.0",
     "bee-queue": "^1.3.1",
     "bluebird": "^3.7.2",
