--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "@gittrends/database-config": "file:../database-config",
     "ajv": "^6.12.6",
+    "async": "^3.2.0",
     "axios": "^0.21.0",
     "bee-queue": "^1.3.1",
     "bluebird": "^3.7.2",
-    "bottleneck": "^2.19.5",
     "bull-arena": "^3.6.1",
     "chalk": "^4.1.0",
     "collections": "^5.1.12",
