--- a/packages/service/pm2-ecosystem.yml.example
+++ b/packages/service/pm2-ecosystem.yml.example
@@ -1,23 +1,19 @@
 apps:
-  - name: gittrends-queue-board
-    script: util/queue-board.js
-    out_file: /dev/null
-
   - name: gittrends-proxy-server
     interpreter: npx
     script: github-proxy-server
     args: --port 3000 --request-interval 50 --tokens tokens.txt
     out_file: /dev/null
 
-  - name: gittrends-scheduler
+  - name: scheduler
     interpreter_args: -r @hsborges/env-config
     script: scheduler.js
     args: all
     instance_var: INSTANCE_ID
-    cron_restart: '0/4 * * * *'
+    cron_restart: '0 */4 * * *'
     autorestart: false
 
-  - name: gittrends-updater
+  - name: updater
     interpreter_args: -r @hsborges/env-config
     script: updater.js
     args: --workers 1
