--- a/.env.example
+++ b/.env.example
@@ -38,5 +38,7 @@ GITHUB_SECRET_ID=
 # other
 GITTRENDS_BATCH_SIZE=1000
 GITTRENDS_QUEUE_ATTEMPS=1
+GITTRENDS_QUEUE_PRIORITIES="repos=1 releases=2 tags=2 watchers=3 stargazers=3 dependencies=4 issues=5 pulls=5 users=6"
+GITTRENDS_QUEUE_BOARD_PORT=8082
 GITTRENDS_PGADMIN_PORT=8081
 
