--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -29,8 +29,8 @@
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.20",
     "numeral": "^2.0.6",
-    "promise-retry": "^2.0.1",
     "redis": "^3.0.2",
+    "retry": "^0.12.0",
     "table": "^6.0.4",
     "user-agents": "^1.0.559"
   },
