--- a/packages/env-config/package.json
+++ b/packages/env-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hsborges/env-config",
+  "name": "@gittrends/env-config",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
