--- a/packages/service/pm2-ecosystem.yml.example
+++ b/packages/service/pm2-ecosystem.yml.example
@@ -6,7 +6,7 @@ apps:
     out_file: /dev/null
 
   - name: scheduler
-    interpreter_args: -r @hsborges/env-config
+    interpreter_args: -r @gittrends/env-config
     script: scheduler.js
     args: all
     instance_var: INSTANCE_ID
@@ -14,7 +14,7 @@ apps:
     autorestart: false
 
   - name: updater
-    interpreter_args: -r @hsborges/env-config
+    interpreter_args: -r @gittrends/env-config
     script: updater.js
     args: --workers 1
     instances: 1
