--- a/packages/website-api/package.json
+++ b/packages/website-api/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "npx -n '-r @hsborges/env-config' fastify start -l info app.js",
-    "dev": "npx -n '-r @hsborges/env-config' fastify start -w -l info -P app.js ---port 8888"
+    "start": "node -r @gittrends/env-config ./node_modules/.bin/fastify start -l info app.js",
+    "dev": "node -r @gittrends/env-config ./node_modules/.bin/fastify start -w -l info -P app.js ---port 8888"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,6 @@
     "nodemailer": "^6.4.11"
   },
   "devDependencies": {
-    "@hsborges/env-config": "file:../env-config"
+    "@gittrends/env-config": "file:../env-config"
   }
 }
