feat: add support to https with lets encrypt

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -8,14 +8,21 @@ map $sent_http_content_type $expires {
 }
 
 server {
-    listen          80;             # the port nginx is listening on
-    server_name     localhost;      # setup your domain here
+    listen          [::]:80 default;
+    listen          80;
+
+    server_name     gittrends.app www.gittrends.app;
 
     gzip            on;
     gzip_types      text/plain application/xml text/css application/javascript;
     gzip_min_length 1000;
 
     charset utf-8;
+
+    location ~ /.well-known/acme-challenge {
+        allow all;
+        root /var/www/certbot;
+    }
 
     location /api/ {
         expires $expires;
@@ -70,3 +77,17 @@ server {
         proxy_cache_key             $uri$is_args$args;
     }
 }
+
+# server {
+#     listen        [::]:443 ssl http2;
+#     listen        443      ssl http2;
+
+#     server_name   gittrends.app www.gittrends.app;
+
+#     ssl_certificate /etc/nginx/ssl/live/gittrends.app/fullchain.pem;
+#     ssl_certificate_key /etc/nginx/ssl/live/gittrends.app/privkey.pem;
+
+#     location / {
+#         proxy_pass http://localhost;
+#     }
+# }
