--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,13 +100,26 @@ services:
     restart: always
     ports:
       - 80:80
+      - 443:443
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./data/nginx:/etc/nginx/conf.d
+      - ./data/certbot/conf:/etc/nginx/ssl
+      - ./data/certbot/data:/var/www/certbot
     depends_on:
       - website-api
       - website-server
     networks:
       - gittrends
+
+  certbot:
+    image: certbot/certbot:latest
+    command: certonly --webroot --webroot-path=/var/www/certbot --email hudsonsilbor@gmail.com --agree-tos --no-eff-email --force-renewal -d gittrends.app -d www.gittrends.app
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/logs:/var/log/letsencrypt
+      - ./data/certbot/data:/var/www/certbot
+    depends_on:
+      - website
 
 volumes:
   db:
