--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,7 @@ services:
 
   traefik:
     image: 'traefik:latest'
+    restart: always
     command:
       # - --log.level=DEBUG
       - --api.dashboard=true
