fix: remove debug mod and fix nuster data path

--- a/data/nuster/nuster.cfg
+++ b/data/nuster/nuster.cfg
@@ -1,5 +1,5 @@
 global
-    nuster cache on data-size 500m dir /tmp/cache
+    nuster cache on data-size 500m dir /tmp-cache
 defaults
     retries 3
     mode http
