fix: reduce cache size (memory) and set memory off on backends

--- a/data/nuster/nuster.cfg
+++ b/data/nuster/nuster.cfg
@@ -1,5 +1,5 @@
 global
-    nuster cache on data-size 500m dir /tmp-cache
+    nuster cache on data-size 100m dir /tmp-cache
 defaults
     retries 3
     mode http
@@ -15,11 +15,11 @@ backend nuxt
     nuster cache on
     nuster rule eternal-b1 ttl 0
     nuster rule homepage ttl 10m if { path / }
-    nuster rule basic-b1 disk on wait on etag on last-modified on
+    nuster rule basic-b1 disk on memory off wait on etag on last-modified on
     server b1 website-server:80
 backend api
     nuster cache on
     http-request set-path "%[path,regsub(^/api/,/)]"
     nuster rule eternal-b2 ttl 0
-    nuster rule basic-b2 disk on wait on etag on last-modified on
+    nuster rule basic-b2 disk on memory off wait on etag on last-modified on
     server b2 website-api:80
