--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,40 +88,17 @@ services:
     networks:
       - gittrends
 
-  cache:
-    image: nuster/nuster:latest
+  nginx:
+    image: nginx:alpine
     restart: always
+    command: '/bin/sh -c ''while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g "daemon off;"'''
     volumes:
-      - ./data/nuster/nuster.cfg:/etc/nuster/nuster.cfg:ro
+      - ./data/nginx/development.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - website-api
       - website-server
-    expose:
-      - 80
-    networks:
-      - gittrends
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.website-server.rule=Host(`localhost`) || Host(`www.localhost`)
-      - traefik.http.routers.website-server.entrypoints=web
-
-  traefik:
-    image: 'traefik:latest'
-    restart: always
-    command:
-      - --log.level=DEBUG
-      - --api.dashboard=true
-      - --api.insecure=true
-      - --providers.docker=true
-      - --providers.docker.exposedbydefault=false
-      - --entrypoints.web.address=:80
     ports:
       - 80:80
-      - 8080:8080
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    depends_on:
-      - cache
     networks:
       - gittrends
 
